<resources>
    <string name="app_name">viva_tu_pueblo_ANDROID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="app_logo">app_logo</string>
    <string name="login_button">login_button</string>
    <string name="log_in">Log In</string>
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Registro</string>
    <string name="password">Contraseña</string>
    <string name="full_name">Nombre Completo</string>
    <string name="address">Dirección</string>
    <string name="city">Ciudad</string>
    <string name="already_have_account">¿Ya tienes una cuenta? Log In</string>
    <string name="sign_up_button">Registrarse</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="nete_a_uno">¡Únete a uno!</string>
    <string name="has_olvidado_tu_contrase_a">¿Has olvidado tu contraseña?</string>
    <string name="continuar_como_invitado">Continuar como invitado</string>
    <string name="no_tienes_pueblo">¿No tienes Pueblo!?</string>
    <string name="logo_image">logo_image</string>
    <!--String used for news fragments-->
    <string name="noticias">Noticias</string>
    <string name="inicio">Inicio</string>
    <string name="deportes">Deportes</string>
    <string name="salud">Salud</string>
    <string name="ciencia">Ciencia</string>
    <string name="entretenimiento">Entretenimiento</string>
    <string name="tecnologia">Tecnologia</string>
    <string name="noticia_especifica">Noticia especifica</string>
    <string name="homepage" translatable="false">Home</string>
    <string name="abrir_calendario">Abrir calendario</string>
    <string name="incidentes">Incidentes</string>
    <string name="rutas">Rutas</string>
    <string name="eventos">Eventos</string>
    <string name="salir">Salir</string>
    <string name="mis_datos">Mis Datos</string>
    <string name="mis_eventos">Mis Eventos</string>
    <string name="profile_picture">profile_picture</string>
    <string name="nombre_del_usuario">Nombre del usuario</string>
    <string name="email_example_com">email@example.com</string>
    <string name="calle_ejemplo_ciudad">Calle Ejemplo, Ciudad</string>
    <string name="ciudad">Ciudad</string>
    <string name="editar">Editar</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="log_out">Log Out</string>
    <string name="Inicio">Inicio</string>
    <string name="Deportes">Deportes</string>
    <string name="Salud">Salud</string>
    <string name="Ciencia">Ciencia</string>
    <string name="Entretenimento">Entretenimento</string>
    <string name="Tecnologia">Tecnologia</string>
    <string name="no_internet_message">no conexion a internet</string>
    <string name="el_tiempo">El tiempo</string>
    <string name="pr_ximos_eventos">Próximos Eventos</string>
    <string name="nuestra_historia">Nuestra Historia</string>
    <string name="el_pueblo_de_neila_da_nombre_a_una_sierra_cuyo_pico_m_s_alto_el_de_mu_alba_alcanza_los_2_073_m_de_altitud_la_villa_aparece_emplazada_en_el_fondo_del_valle_a_1_200_metros_sobre_el_nivel_del_mar_y_esta_situada_en_la_confluencia_de_tres_provincias_burgos_soria_y_la_rioja_neila_perteneci_al_alfoz_de_lara_y_era_villa_realenga_un_peque_o_emporio_de_riqueza_cuando_se_mantuvo_durante_siglos_el_comercio_de_la_lana_y_que_hoy_s_lo_es_un_recuerdo_fruto_de_este_pasado_esplendoroso_a_n_permanecen_en_pie_algunas_casas_solariegas_con_sus_escudos_empotrados_en_la_piedra">El pueblo de Neila da nombre a una Sierra cuyo pico más alto, el de Muñalba alcanza los 2.073 m. de altitud. La villa aparece emplazada en el fondo del valle, a 1.200 metros sobre el nivel del mar y esta situada en la confluencia de tres provincias, Burgos, Soria y La Rioja. Neila perteneció al Alfoz de Lara, y era villa realenga, un pequeño emporio de riqueza cuando se mantuvo durante siglos el comercio de la lana y que hoy sólo es un recuerdo. Fruto de este pasado esplendoroso aún permanecen en pie algunas casas solariegas, con sus escudos empotrados en la piedra.</string>
    <string name="perfil" translatable="false">Perfil</string>
</resources>