<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    tools:context="viva_tu_pueblo.SignUpActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/round_image"
        android:contentDescription="@string/logo_image"
        android:scaleType="centerCrop"
        android:clipToOutline="true"
        android:src="@drawable/logo_improvisado"
        app:layout_constraintBottom_toTopOf="@+id/guidelineImageAndText"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEndSignup"
        app:layout_constraintStart_toStartOf="@+id/guidelineStartSignup"
        app:layout_constraintTop_toTopOf="@+id/guidelineTopSignup" />

    <!-- Full Name Input -->
    <EditText
        android:id="@+id/full_name_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:backgroundTint="@color/white"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEndSignup"
        app:layout_constraintStart_toStartOf="@+id/guidelineStartSignup"
        app:layout_constraintTop_toBottomOf="@id/logo_image" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/email_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:backgroundTint="@color/white"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEndSignup"
        app:layout_constraintStart_toStartOf="@+id/guidelineStartSignup"
        app:layout_constraintTop_toBottomOf="@id/full_name_field" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/password_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:backgroundTint="@color/white"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEndSignup"
        app:layout_constraintStart_toStartOf="@+id/guidelineStartSignup"
        app:layout_constraintTop_toBottomOf="@id/email_field" />

    <!-- Address Input -->
    <EditText
        android:id="@+id/address_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:padding="12dp"
        android:backgroundTint="@color/white"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEndSignup"
        app:layout_constraintStart_toStartOf="@+id/guidelineStartSignup"
        app:layout_constraintTop_toBottomOf="@id/password_field" />

    <!-- City Input -->
    <EditText
        android:id="@+id/city_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/city"
        android:inputType="text"
        android:padding="12dp"
        android:backgroundTint="@color/white"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEndSignup"
        app:layout_constraintStart_toStartOf="@+id/guidelineStartSignup"
        app:layout_constraintTop_toBottomOf="@id/address_field" />

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/signup_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEndSignup"
        app:layout_constraintStart_toStartOf="@+id/guidelineStartSignup"
        app:layout_constraintTop_toBottomOf="@id/city_field" />

    <!-- Already Have Account -->
    <TextView
        android:height="48dp"
        android:id="@+id/login_redirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/already_have_account"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEndSignup"
        app:layout_constraintStart_toStartOf="@+id/guidelineStartSignup"
        app:layout_constraintTop_toBottomOf="@id/signup_button" />

    <!-- Guidelines -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTopSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineImageAndText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEndSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStartSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

</androidx.constraintlayout.widget.ConstraintLayout>
